<?xml version="1.0" encoding="utf-8"?>
<resources>
	<item type="id" name="tag_pl_fatherid"></item>
	<item type="id" name="tag_pl_suibiid"></item>
	<item type="id" name="tag_pl_username"></item>
    
    <string name="app_name">WestLake</string>
    <string name="hello_world">Hello world!</string>
    <string name="honmepage">首页</string>
    <string name="search">导览</string>
    <string name="sites">景点</string>
    <string name="wiki">百科</string>
    <string name="more">更多</string>
    <string name="active">文化活动</string>
    <string name="food">美食活动</string>
    <string name="show">演出活动</string>
    <string name="exhibition">文化会展</string>
    <string name="westlake">西湖寻梅</string>
    <string name="wikititle">非物质文化遗产</string>
    <string name="wikisearch">搜一搜</string>
    <string name="loadmore">加载更多...</string>
    <string name="huodong">活动</string>
    <string name="map">地图</string>
    <string name="center">个人中心</string>
    <string name="setting">设置</string>
    <string name="search_sao">扫一扫</string>
    <string name="search_daolan">自动导览</string>
    <string name="search_yuyin">只听语音</string>
    <string name="search_sites">自动切换场景</string>
    <string name="search_start">开始导览</string>
    <string name="silding_center_login">账号登陆</string>
    <string name="silding_center_register">账号注册</string>
    <string name="username_tip">邮箱/手机号</string>
    <string name="username">用户名</string>
    <string name="mail">邮箱</string>
    <string name="password_tip">密码</string>
    <string name="checkpassword">确认密码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="cancel">取消</string>
    <string name="other">使用其他账号登陆</string>
    <string name="story">故事</string>
    <string name="storycontent">故事正文</string>
    <string name="essay">随笔</string>
    <string name="myessay">我的随笔</string>
    <string name="write_essay">写随笔</string>
    <string name="transmit">转发</string>
    <string name="comment">评论</string>
    <string name="response">回复</string>
    <string name="send">发送</string>
    <string name="publish">发布</string>
    <string name="saysomething">说几句吧...</string>
    <string name="addtag">在这里添加标签</string>
    <string name="writesomething">写点什么吧...</string>
    <string name="pbtoall">公开</string>
    <string name="pvtoone">私密</string>
    <string name="tag">Tag</string>
    <string name="shareto">同时分享到</string>
    <string name="shu">|</string>
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>

    <color name="black">#000000</color>
    <color name="white">#ffffff</color>
    <color name="gold">#FFD700</color>
    <color name="azure">#F0FFFF</color>
    <color name="selected">#E77D29</color>
    <color name="disselected">#010101</color>
    <color name="listbg">#FFFFFF</color>
    <color name="wordwrapbg">#C6C7C6</color>
    <color name="gray">#D8D8D8</color>
    <color name="deepgray">#606060</color>
    <color name="red">#FC4343</color>
    <color name="blue">#0080FF</color>
    <color name="transparent">#00000000</color>

</resources>