<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <FrameLayout
        android:id="@+id/silding_center_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/navigationbar">

        <TextView
            android:id="@+id/silding_register_textView"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/silding_center_register"
            android:textColor="@color/black"
            android:textSize="20sp" >
        </TextView>

        <Button
            android:id="@+id/silding_register_back"
            android:layout_width="24dip"
            android:layout_height="24dip"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dip"
            android:background="@drawable/back_d" >
        </Button>
    </FrameLayout>

    <EditText
        android:id="@+id/register_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:background="@drawable/textview_border"
        android:hint="@string/username" />
    <EditText
        android:id="@+id/register_mail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:background="@drawable/textview_border"
        android:hint="@string/mail" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:background="@drawable/textview_border"
        android:hint="@string/password_tip"
        android:inputType="textPassword" />
    
    <EditText
        android:id="@+id/register_re_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:background="@drawable/textview_border"
        android:hint="@string/checkpassword"
        android:inputType="textPassword" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/register_yes_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@color/selected"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/register_no_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:background="@color/selected"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <CheckBox android:id="@+id/register_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        />

</LinearLayout>