<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/story_comment"
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:background="@drawable/linear_down_color" >

        <TextView
            android:id="@+id/story_comment_title"
            android:layout_width="wrap_content"
            android:layout_height="45dip"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/comment"
            android:textColor="@color/black"
            android:textSize="20sp" >
        </TextView>

        <TextView
            android:id="@+id/story_comment_cancel"
            android:layout_width="wrap_content"
            android:layout_height="45dip"
            android:layout_marginLeft="12dip"
            android:gravity="center"
            android:layout_gravity="left|center_vertical"
            android:text="@string/cancel"
            android:textColor="@color/selected"
            android:textSize="20sp"
            android:textStyle="normal" >
        </TextView>

        <TextView
            android:id="@+id/story_comment_send"
            android:layout_width="wrap_content"
            android:layout_height="45dip"
            android:layout_marginRight="12dip"
            android:gravity="center"
            android:layout_gravity="right|center_vertical"
            android:text="@string/send"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:textStyle="normal">
        </TextView>
    </FrameLayout>

    <EditText
        android:id="@+id/story_comment_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:minLines="8"
        android:textSize="18sp"
        android:textStyle="normal"
        android:gravity="top"
        android:background="@null"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/saysomething"
        android:scrollbars="vertical"/>

</LinearLayout>