<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/essay_detail_titile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/navigationbar" >

        <TextView
            android:id="@+id/essay_detail_titiletx"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/myessay"
            android:textColor="@color/black"
            android:textSize="20sp" >
        </TextView>

        <Button
            android:id="@+id/essay_detail_titile_left"
            android:layout_width="12dip"
            android:layout_height="20dip"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dip"
            android:background="@drawable/back_d" >
        </Button>

        <TextView
            android:id="@+id/essay_detail_titile_lefttx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:text="@string/essay"
            android:textColor="#FFB328"
            android:textSize="20sp"
            android:textStyle="normal" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/essay_detail_tool"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/navigationbar"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/essay_detail_transmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/transmit"
            android:textColor="@color/selected"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/shu"
            android:textColor="@color/deepgray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/essay_detail_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/comment"
            android:textColor="@color/selected"
            android:textSize="20sp" />
    </LinearLayout>
    
    <com.zg.westlake.homepage.common.CustomListView
        android:id="@+id/essay_detail_fullrefresh"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/essay_detail_titile"
        android:layout_above="@id/essay_detail_tool"
        android:cacheColorHint="@color/transparent"
        android:divider="@color/gray"
        android:dividerHeight="1dp"
        android:fadingEdgeLength="0dp" />

</RelativeLayout>