<?xml version="1.0" encoding="UTF-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/main_radio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/tabbar_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/home_page"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/homepage_u"
                android:tag="home_page"
                android:text="@string/honmepage" />

            <RadioButton
                android:id="@+id/search_page"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/navigation_u"
                android:tag="search_page"
                android:text="@string/search" />

            <RadioButton
                android:id="@+id/sites_page"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/sites_u"
                android:tag="sites_page"
                android:text="@string/sites" />

            <RadioButton
                android:id="@+id/knows_page"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/wiki_u"
                android:tag="knows_page"
                android:text="@string/knows" />
            
            <RadioButton
                android:id="@+id/more_page"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/more_u"
                android:tag="more_page"
                android:text="@string/honmepage" />
        </RadioGroup>
    </LinearLayout>

</TabHost>