<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/center_list_userimg"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            android:background="@color/gray"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/center_list_creator"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:textColor="@color/selected"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/center_list_createdate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/wordwrapbg"
                android:textSize="16sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/center_list_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/center_list_contentimg"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:background="@color/gray"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/linear_bg_color"
        android:orientation="horizontal"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/center_list_transmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/transmit"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/shu"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/center_list_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/comment"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>